Fix positioning and resizing issue on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -6,10 +12,8 @@ body {
     margin: 0px auto;
     padding-top: 0;
     padding-bottom: 7rem;
-    min-height: 100vh;
-    min-width: 100vh;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     background-color: #F8F3EB;
     position: absolute;
     font-family: Helvetica, Arial, sans-serif;
@@ -26,8 +30,6 @@ body {
     width: 100%;
     height: 20px;
     color:#F8F3EB;
-    position: absolute;
-    top: 0;
 }
 
 .calcContainer {
@@ -44,6 +46,7 @@ body {
     border-radius: 10px;
     box-shadow: black 2px 5px 10px;
     margin: 20px;
+    flex: 0;
 }
 
 #display {
@@ -79,6 +82,7 @@ body {
     justify-content: center;
     align-items: center;
     flex: auto;
+    width: 400px;
 }
 
 button {
